# twitch-tamagotchi

./: .env  Cargo.toml  README.md  flake.nix
assets/: index.html
src/: commands.rs  main.rs  parser.rs  tamagotchi.rs  webserver.rs
