[package]
name = "twitch-tamagotchi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenv = "0.15.0"
circular-buffer = "1.1.0"
rand = "0.9.1"
tmi = "0.9.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.4", features = ["cors"] }
winnow = "0.7.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rust-embed = "8.7.2"
mime_guess = "2.0.5"

[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
